Fixed bug #51725 (xmlrpc_get_type() returns true on invalid dates). (Mike)